Add project branch deletion API
